--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,8 +11,12 @@ phases:
       - echo Building the application...
       - npm run build
 
-
 artifacts:
   files:
     - '**/*'
+  base-directory: build
   discard-paths: yes
+
+cache:
+  paths:
+    - node_modules/**/*
