--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,9 +13,8 @@ phases:
 
 artifacts:
   files:
-    - '**/*'
-  base-directory: build
-  discard-paths: no
+    - '**/*'  # This includes all files and directories
+  discard-paths: no  # Retains the full directory structure
 
 cache:
   paths:
