--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,17 +3,20 @@ version: 0.2
 phases:
   install:
     commands:
+      - echo Installing dependencies...
       - npm install
-  pre_build:
-    commands:
-      - echo "Starting the build phase..."
+
   build:
     commands:
+      - echo Building the application...
       - npm run build
-  post_build:
-    commands:
-      - echo "Build completed on `date`"
 
 artifacts:
   files:
-    - '**/*'  # include all files in the build artifacts
+    - '**/*'
+  base-directory: build
+  discard-paths: no
+
+cache:
+  paths:
+    - node_modules/**/*
